Changes for 1.3.8:

 - finished WEB monitoring (Eugene)
 - changed type of httptest.lastfailedstep to integer (Alexei)
 - added check for a list of status codes for WEB monitoring (Alexei)
 - added acknowledge mangement for overview screen (Eugene)
 - default groups for users 'guest' and 'Admin' (Alexei)
 - added http status code configuration for web monitoring (Eugene)
 - new column httpstep.status_codes (Alexei)
 - set DENY permission as default for ZABBIX users (Eugene)
 - fixed Error in "Cancel" after ack of a trigger (Eugene)
 - fixed index.php looping on db connection failing (Eugene)
 - button "Update" renamed to "Refresh" in data export (Alexei)
 - fixed translation behavior for housekeeper configurations (Eugene)
 - fixed time movement for history (Eugene)
 - added availability to yse ')(!' characters in item keys (Eugene)
 - improved management of trigger (Eugene)

Changes for 1.3.7:

 - revision R5 of ZABBIX Manual (Alexei)
 - fixed processing of '-t' and other params when '-c' is not given (Alexei)
 - increased max size of images (Eugene)
 - fixed default data for default host 'ZABBIX-Server' (Alexei)
 - fixed processing of uptime/downtime condition (Alexei)
 - fixed processing of uptime/downtime timestamps for DM (Alexei)
 - fixed support of action "Delete host" (Alexei)
 - added column items.params (Alexei)
 - support of Include directive for configuration files (Alexei)
 - ZABBIX process will exit on config file open error (Alexei)
 - cosmetic changes for server's option '-h' (Alexei) 
 - fixed coniguration scripts for mysql/net-snmp/curl (Eugene)
 - fixed SMS sender (Eugene)
 - timeout for sending emails and SMS was increased to 40 seconds (Eugene)
 - unknown trigger events won't generate actions (Alexei)
 - fixed host.c, constant FALSE replaces by FAIL (Alexei)
 - fixed generation of events for unknown status of triggers (Alexei)
 - fixed processing of trigger statuses (Alexei)